# screen-share

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs  macos.rs  windows.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs  macos.rs  windows.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/signaling-server/: Cargo.toml
crates/signaling-server/src/: main.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
