[package]
name = "capture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi"] }

[dev-dependencies]
image = "0.25"
