[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signaling-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
serde_json = "1"
rand = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
